// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentUser when logged in 1`] = `
Object {
  "data": Object {
    "currentUser": Object {
      "rowId": "[id-1]",
    },
  },
}
`;

exports[`currentUser when logged out 1`] = `
Object {
  "data": Object {
    "currentUser": null,
  },
}
`;
